--- a/index.html
+++ b/index.html
@@ -2,18 +2,43 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>My Website</title>
+  <title>ふるさと納税おすすめカタログ</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>こんにちは、GitHub Pages!</h1>
-  <p>これはテストページです。</p>
+  <header>
+    <h1>ふるさと納税おすすめカタログ</h1>
+    <p>人気の返礼品をジャンル別・地域別に紹介！迷ったらこのサイトでチェック。</p>
+  </header>
+  <main>
+    <section>
+      <h2>ジャンル別おすすめ返礼品</h2>
+      <ul>
+        <li><a href="meat.html">お肉特集</a></li>
+        <li><a href="fruits.html">フルーツ特集</a></li>
+        <li><a href="seafood.html">魚介類特集</a></li>
+        <li><a href="rice.html">お米・パン・麺類</a></li>
+        <li><a href="value.html">高還元率ランキング</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>地域別おすすめ返礼品</h2>
+      <ul>
+        <li><a href="hokkaido.html">北海道の返礼品</a></li>
+        <li><a href="kyushu.html">九州の返礼品</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>ふるさと納税ガイド</h2>
+      <ul>
+        <li><a href="faq.html">よくある質問</a></li>
+        <li><a href="about.html">このサイトについて</a></li>
+        <li><a href="privacy.html">プライバシーポリシー</a></li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 ふるさと納税おすすめカタログ</p>
+  </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
